# szip

./: HISTORY.txt  INSTALL  Makefile.am  Makefile.in  RELEASE.txt  aclocal.m4  configure  configure.ac
examples/: Makefile.am  Makefile.in  example.c
test/: Makefile.am  Makefile.in  gentest.c
